{{$NEXT}}

0.029     2012-01-26 22:25:06 America/Los_Angeles

    The --repos option on pinto-server has been officially
    renamed to --root.  This is to be consistent with the
    interfaces of pinto-admin and pinto-remote.  The old
    --repos option will not be supported for backward
    compatibility.

0.028     2011-12-12 00:23:45 America/Los_Angeles

    Exceptions from Pinto are now trapped and returned in the body of
    the response from the server.  This is more helpful than the 500
    error page that Dancer throws up.

    Added support for the statistics, pin, and unpin actions.  So
    we now need Pinto version 0.028 or better.

0.026     2011-12-07 14:09:41 America/Los_Angeles

    No new functionality.  Just matching up with the latest Pinto API.
    Pinto and Pinto::Server are both evolving rapidly, and I make no
    promises about backward compatibility right now.

0.021     2011-09-03 21:43:25 America/Los_Angeles

    Addd the nop route.  This is used by the 'ping'
    command of pinto-remote.

0.020     2011-09-01 15:29:40 America/Los_Angeles

    Now requires Pinto 0.23, which has a different interface.

    Refactored internals so they could be tested.

    And then I actually wrote the tests!

0.019     2011-08-30 01:14:43 America/Los_Angeles

    Now requires Pinto 0.021, which behaves better in a 
    server environment.  I thought I had fixed this in version 
    0.017, but I was wrong.

0.018     2011-08-28 20:59:15 America/Los_Angeles

    Now required Pinto 0.020, which supports the Nop action.

    pinto-server will now always pull/update your repository
    from VCS upon startup.  This helps ensure that the
    repository is in a good state when we start.  But we
    never pull/update again after that.

0.017     2011-08-24 00:24:17 America/Los_Angeles

    Now requires Pinto 0.017 or newer, which runs better under
    a server environment.

    All the guts of Pinto::Server are now in pinto-server, as