@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    Support the --norecurse option in the add command (Karen Etheridge).
+
 0.029     2012-01-26 22:25:06 America/Los_Angeles
 
     The --repos option on pinto-server has been officially
